--- a/index.html
+++ b/index.html
@@ -1,99 +1,196 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | [Blogr]</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  Product
+    <title>Frontend Mentor | [Blogr]</title>
+    <link rel="stylesheet" href="./dist/css/main.css" />
+  </head>
+  <body>
+    <div class="background-wrapper">
+      <img src="images/bg-pattern-intro-mobile.svg" alt="" />
+      <header>
+        <div class="container">
+          <img src="images/logo.svg" alt="" />
 
-  Overview
-  Pricing
-  Marketplace
-  Features
-  Integrations
+          <label for="hamburger-menu" class="ham">
+            <input type="checkbox" name="" id="hamburger-menu" />
+          </label>
+          <nav>
+            <ul class="links">
+              <li>
+                <a href="#">Product</a>
+                <img class="arrow" src="images/icon-arrow-dark.svg" alt="" />
+                <img
+                  src="images/icon-arrow-light.svg"
+                  class="arrow-desktop"
+                  alt=""
+                />
 
-  Company
+                <ul class="dropdown">
+                  <li><a href="#">Overview</a></li>
+                  <li><a href="#"> Pricing</a></li>
+                  <li><a href="#"> Marketplace</a></li>
+                  <li><a href="#"> Features</a></li>
+                  <li><a href="#">Integrations</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="#">Company</a>
+                <img class="arrow" src="images/icon-arrow-dark.svg" alt="" />
+                <img
+                  src="images/icon-arrow-light.svg"
+                  class="arrow-desktop"
+                  alt=""
+                />
+                <ul class="dropdown">
+                  <li><a href="#">About</a></li>
+                  <li><a href="#"> Team</a></li>
+                  <li><a href="#"> Blog</a></li>
+                  <li><a href="#"> Carrers</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="#">Connect</a>
+                <img class="arrow" src="images/icon-arrow-dark.svg" alt="" />
+                <img
+                  src="images/icon-arrow-light.svg"
+                  class="arrow-desktop"
+                  alt=""
+                />
+                <ul class="dropdown">
+                  <li><a href="#">Conntact</a></li>
+                  <li><a href="#">Newsletter</a></li>
+                  <li><a href="#">LinkeIn</a></li>
+                </ul>
+              </li>
+              <li><a href=""></a></li>
+            </ul>
+            <div class="btns">
+              <a href="#" class="btn">Login</a>
+              <a href="#" class="btn btn-colored">Sign Up</a>
+            </div>
+          </nav>
+        </div>
+      </header>
 
-  About
-  Team
-  Blog
-  Careers
-
-  Connect
-
-  Contact
-  Newsletter
-  LinkedIn
-  
-  Login
-  Sign Up
-
-  A modern publishing platform
-  Grow your audience and build your online brand
-
-  Start for Free
-  Learn More
-
-  Designed for the future
-
-  Introducing an extensible editor
-  Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. 
-  The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, 
-  videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or 
-  change the looks of a blog.
-
-  Robust content management
-  Flexible content management enables users to easily move through posts. Increase the usability of your blog 
-  by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.
-
-  State of the Art Infrastructure
-  With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
-  This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
-
-  Free, open, simple
-  Blogr is a free and open source application backed by a large community of helpful developers. It supports 
-  features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools, 
-  and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.
-
-  Powerful tooling
-  Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but
-  capable of producing even the most complicated sites.
-
-  Product
-
-  Overview
-  Pricing
-  Marketplace
-  Features
-  Integrations
-
-  Company
-
-  About
-  Team
-  Blog
-  Careers
-
-  Connect
-  
-  Contact
-  Newsletter
-  LinkedIn
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+      <h1>A modern publishing platform</h1>
+      <p class="describtion">Grow your audience and build your online brand</p>
+      <div class="btns flex-center gap-1">
+        <a href="#" class="btn btn-colored">Start for Free</a>
+        <a href="#" class="btn btn-bordered">Learn More</a>
+      </div>
+    </div>
+    <!-- !Section 2 -->
+    <section class="section">
+      <div class="container container-right">
+        <h2>Designed for the future</h2>
+        <div class="col-1">
+          <article>
+            <h3>Introducing an extensible editor</h3>
+            <p>
+              Blogr features an exceedingly intuitive interface which lets you
+              focus on one thing: creating content. The editor supports
+              management of multiple blogs and allows easy manipulation of
+              embeds such as images, videos, and Markdown. Extensibility with
+              plugins and themes provide easy ways to add functionality or
+              change the looks of a blog.
+            </p>
+          </article>
+          <article>
+            <h3>Robust content management</h3>
+            <p>
+              Flexible content management enables users to easily move through
+              posts. Increase the usability of your blog by adding customized
+              categories, sections, format, or flow. With this functionality,
+              you’re in full control.
+            </p>
+          </article>
+        </div>
+        <div class="col-2"></div>
+      </div>
+    </section>
+    <!-- ! Section 3 -->
+    <section>
+      <div class="col-1"></div>
+      <div class="col-2">
+        <article>
+          <h2>State of the Art Infrastructure</h2>
+          <p>
+            With reliability and speed in mind, worldwide data centers provide
+            the backbone for ultra-fast connectivity. This ensures your site
+            will load instantly, no matter where your readers are, keeping your
+            site competitive.
+          </p>
+        </article>
+      </div>
+    </section>
+    <!-- todo add same style as section 2 but reverse -->
+    <section class="reverse">
+      <div class="container container-left">
+        <div class="col-1">
+          <article>
+            <h3>Free, open, simple</h3>
+            <p>
+              Blogr is a free and open source application backed by a large
+              community of helpful developers. It supports features such as code
+              syntax highlighting, RSS feeds, social media integration,
+              third-party commenting tools, and works seamlessly with Google
+              Analytics. The architecture is clean and is relatively easy to
+              learn.
+            </p>
+          </article>
+          <article>
+            <h3>Powerful tooling</h3>
+            <p>
+              Batteries included. We built a simple and straightforward CLI tool
+              that makes customization and deployment a breeze, but capable of
+              producing even the most complicated sites.
+            </p>
+          </article>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="container">
+        <img src="images/logo.svg" alt="" />
+        <figure>
+          <figcaption>Product</figcaption>
+          <ul>
+            <li><a href="#">Overview</a></li>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Marketplace</a></li>
+            <li><a href="#">Features</a></li>
+            <li><a href="#">Integrations</a></li>
+          </ul>
+        </figure>
+        <figure>
+          <figcaption>Company</figcaption>
+          <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Team</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Careers</a></li>
+          </ul>
+        </figure>
+        <figure>
+          <figcaption>Connect</figcaption>
+          <ul>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Newsletter</a></li>
+            <li><a href="#">Linkedin</a></li>
+          </ul>
+        </figure>
+      </div>
+    </footer>
+  </body>
 </html>
