Finish Even Sections

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
     </div>
     <!-- !Section 2 -->
     <section class="section">
-      <div class="container container-right">
-        <h2>Designed for the future</h2>
+      <h2>Designed for the future</h2>
+      <div class="container-right">
         <div class="col-1">
           <article>
             <h3>Introducing an extensible editor</h3>
@@ -116,11 +116,22 @@
             </p>
           </article>
         </div>
-        <div class="col-2"></div>
+        <div class="col-2">
+          <img
+            src="images/illustration-editor-mobile.svg"
+            alt=""
+            class="only-mobile"
+          />
+          <img
+            src="images/illustration-editor-desktop.svg"
+            alt=""
+            class="only-desktop"
+          />
+        </div>
       </div>
     </section>
     <!-- ! Section 3 -->
-    <section>
+    <section class="section-3">
       <div class="col-1"></div>
       <div class="col-2">
         <article>
@@ -135,8 +146,8 @@
       </div>
     </section>
     <!-- todo add same style as section 2 but reverse -->
-    <section class="reverse">
-      <div class="container container-left">
+    <section class="section section-reverse">
+      <div class="container-left">
         <div class="col-1">
           <article>
             <h3>Free, open, simple</h3>
@@ -157,6 +168,18 @@
               producing even the most complicated sites.
             </p>
           </article>
+        </div>
+        <div class="col-2">
+          <img
+            src="images/illustration-laptop-desktop.svg"
+            alt=""
+            class="only-desktop"
+          />
+          <img
+            src="images/illustration-laptop-mobile.svg"
+            alt=""
+            class="only-mobile"
+          />
         </div>
       </div>
     </section>
