📱📱Finish Phone Section

--- a/index.html
+++ b/index.html
@@ -132,17 +132,26 @@
     </section>
     <!-- ! Section 3 -->
     <section class="section-3">
-      <div class="col-1"></div>
-      <div class="col-2">
-        <article>
-          <h2>State of the Art Infrastructure</h2>
-          <p>
-            With reliability and speed in mind, worldwide data centers provide
-            the backbone for ultra-fast connectivity. This ensures your site
-            will load instantly, no matter where your readers are, keeping your
-            site competitive.
-          </p>
-        </article>
+      <div class="container">
+        <div class="col-1">
+          <div class="phone-img-wrapper">
+            <img src="images/illustration-phones.svg" alt="" class="phones" />
+          </div>
+          <!-- <div class="circle-img-wrapper">
+            <img class="circle" src="images/bg-pattern-circles.svg" alt="" />
+          </div> -->
+        </div>
+        <div class="col-2">
+          <article>
+            <h2>State of the Art Infrastructure</h2>
+            <p>
+              With reliability and speed in mind, worldwide data centers provide
+              the backbone for ultra-fast connectivity. This ensures your site
+              will load instantly, no matter where your readers are, keeping
+              your site competitive.
+            </p>
+          </article>
+        </div>
       </div>
     </section>
     <!-- todo add same style as section 2 but reverse -->
